# deva-framework

./: .gitignore  .travis.yml  CMakeLists.txt  DevaFramework.doxy  New Text Document.txt  Win64.bat  gen.py  vkpfngen.py
src/: CMakeLists.txt  CMakeSourceList.txt  Config.hpp  Deva.cpp  Deva.hpp
src/Engine/: CMakeLists.txt  CMakeSourceList.txt  Config.hpp  DevaEngineInstance.cpp  DevaEngineInstance.hpp  Init.cpp  Init.hpp  Keymap.hpp  Perspective.hpp  Preferences.hpp  PublicHeaders.cmake  Renderer.cpp  Renderer.hpp  Scene.hpp  SourceList.cmake  VulkanDevice.cpp  VulkanDevice.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/Engine/Graphics/: Camera.hpp  Config.hpp  DrawableObject.cpp  DrawableObject.hpp  DrawableObjectBuilder.hpp  GraphicObject.cpp  GraphicObject.hpp  GraphicsObject.hpp  Model.hpp  RenderAPI.hpp  RenderSurface.hpp  Renderer.cpp  Renderer.hpp  ResourceCache.hpp  Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp  SceneObject.cpp  SceneObject.hpp  SceneObjectBuilder.hpp  ScreenRenderer.hpp
src/Engine/Input/: Config.hpp  InputFunction.cpp  InputFunction.hpp  InputListener.cpp  InputListener.hpp  KeyboardListener.cpp  KeyboardListener.hpp
src/Engine/MinecraftClone/: Block.hpp
src/Framework/: BasicFunctor.hpp  CMakeLists.txt  CMakeSourceList.txt  Config.hpp  Deva.cpp  Deva.hpp  DevaLogger.cpp  DevaLogger.hpp  Exceptions.cpp  Exceptions.hpp  Init.cpp  Init.hpp  Logger.cpp  Logger.hpp  NumberFormatter.hpp  Platform.hpp  PublicHeaders.cmake  SourceList.cmake
src/Framework/Core/: Config.hpp  DataHolder.hpp  DevaLogger.cpp  DevaLogger.hpp  Exceptions.hpp  Identifiable.hpp  Logger.cpp  Logger.hpp  Serializable.hpp  TypeInfo.hpp  Uuid.cpp  Uuid.hpp
src/Framework/Exceptions/: DevaException.cpp  DevaException.hpp  DevaExternalFailureException.cpp  DevaExternalFailureException.hpp  DevaFailureException.cpp  DevaFailureException.hpp  DevaProgrammerErrorException.cpp  DevaProgrammerErrorException.hpp
src/Framework/Graphics/: Common-setShaderUniform-mat.inl  Common-setShaderUniform-primitive.inl  Common-setShaderUniform-vec.inl  Common-setUniform.inl  Common.hpp  Config.hpp  Font.hpp  Image.cpp  Image.hpp  ImageReaders.cpp  ImageReaders.hpp  Init.cpp  Init.hpp  Master.hpp  Mesh.cpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp  Model.cpp  OpenGL.hpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderVariableDataType.hpp  ShaderVariableFactory.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferObject.cpp  Vulkan.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  glTypes.hpp
src/Framework/Include/: Core.hpp  Math.hpp  Util.hpp  Window.hpp
src/Framework/Math/: BaseMatrix.hpp  BaseVector.hpp  Common.cpp  Common.hpp  Config.hpp  EulerAngles.hpp  Init.cpp  Init.hpp  Master.hpp  Matrix.cpp  Matrix.hpp  MatrixFactory.cpp  MatrixFactory.hpp  MatrixVectorArithmetic.hpp  Quaternion.cpp  Quaternion.hpp  Vector.hpp
src/Framework/Memory/: Allocator.cpp  Allocator.hpp  Config.hpp  LinearAllocator.cpp  LinearAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp
src/Framework/Scripting/: Config.hpp
src/Framework/System/: Config.hpp  Exceptions.hpp  NumberFormatter.hpp
src/Framework/Util/: BinaryFileStreamWrapper.cpp  BinaryFileStreamWrapper.hpp  BinaryReader.hpp  BinaryWriter.hpp  ByteBuffer.cpp  ByteBuffer.hpp  ByteBufferStream.cpp  ByteBufferStream.hpp  ByteInputStream.hpp  ByteOutputStream.hpp  CStructDeleter.hpp  Common.cpp  Common.hpp  Config.hpp  Init.cpp  Init.hpp  Master.hpp  MultiTypeVector.hpp  Observer.cpp  Observer.hpp  Time.cpp  Time.hpp
src/Framework/Window/: CMakeLists.txt  Config.hpp  Events.hpp  ImplInputDevice.hpp  ImplWindow.cpp  ImplWindow.hpp  Init.cpp  Init.hpp  Input.hpp  InputDevice.hpp  InputEvent.hpp  InputListener.hpp  (+10 more)
src/Graphics/: CMakeLists.txt  Common-setShaderUniform-mat.inl  Common.cpp  Common.hpp  Config.hpp  Image.cpp  Image.hpp  ImageReaders.cpp  ImageReaders.hpp  Init.cpp  Init.hpp  Master.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderVariable.hpp  ShaderVariableDataType.cpp  VertexBufferObject.cpp  VertexBufferObject.hpp  glConfig.hpp  glTypes.hpp
src/Math/: BaseMatrix.hpp  BaseVector.hpp  CMakeLists.txt  Config.hpp  Init.hpp  Matrix.cpp  Matrix.hpp  MatrixFactory.cpp  MatrixFactory.hpp  Matrix_Vector.hpp  New_matrix.cpp  New_matrix.hpp  Point.cpp  Point.hpp  Quaternion.cpp  Vector.cpp  Vector.hpp
src/Memory/: LinearAllocator.cpp  LinearAllocator.hpp  PoolAllocator.cpp
src/System/: CMakeLists.txt  Config.hpp  DevaLogger.cpp  DevaLogger.hpp  Exceptions.cpp  Exceptions.hpp  Logger-format.inl  Logger.cpp  Logger.hpp  Master.hpp  NumberFormatter.cpp
src/Util/: BinaryFileStreamWrapper.cpp  BinaryFileStreamWrapper.hpp  BinaryFileStreamWriter.cpp  BinaryFileStreamWriter.hpp  BinaryReader.hpp  BinaryWriter.hpp  ByteBuffer.cpp  ByteBuffer.hpp  ByteBufferBinaryWriter.cpp  ByteBufferBinaryWriter.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Config.hpp  FileStreamBinaryWriter.cpp  FileStreamBinaryWriter.hpp  Init.cpp  Init.hpp  Master.hpp
src/Window/: CMakeLists.txt  Config.hpp  Events.hpp  Init.cpp  Init.hpp  Input.hpp  Master.hpp  Window.cpp  Window.hpp  WindowEventListener.cpp  WindowEventListener.hpp  WindowObserver.cpp  Window_new.cpp  Window_new.hpp
src/framework_include/: Deva.hpp  Exceptions.hpp  Master.hpp
tests/: CMakeLists.txt  FT_text.cpp  Images.cpp  ModelExportImport.cpp  OpenGL.cpp  RotatingCube.cpp  Window.cpp
tests/FT_text/: test-FT_text.cpp
tests/Framework/: testByteBuffer.cpp  testLua.cpp  testMultiTypeVector.cpp  testVertexBuffer.cpp
tests/Images/: FragmentShader.inl  SS1.png.bak  VertexShader.inl  test-Images.cpp
tests/MinecraftClone/: test-MinecraftClone.cpp
tests/Model/: test-Model.cpp
tests/OpenGL/: FragmentShader.inl  VertexShader.inl  test-OpenGL.cpp
tests/RotatingCube/: FragmentShader.inl  VertexShader.inl  test-RotatingCube.cpp
tests/UnitTests/: test-UnitTests.cpp
tests/Vulkan/: test-Vulkan.cpp
tests/Window/: test-Window.cpp
(+678 files in other folders)
